--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,10 @@
     <body>
         <div id="container">
             <div id= "cabecera">
-                Cabecera 
+                Hyperblog
+                 <span id= "tagline">
+                     tu blog de confinaza
+                 </span>
             </div>
             <div id= "post">
                 <h1>Este es el título atractivo e interesante del post</h1>
