--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
             <div id= "cabecera">
                 Hyperblog
                  <span id= "tagline">
-                     tu blog de confinaza
+                     tu blog maestro
                  </span>
             </div>
             <div id= "post">
